# AI-Persona

./: .gitignore  README.md  prompt.md  reflection.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py  models.py  personas.py  test_stream.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
